kong/consumers-credentials-authentication.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    plugins.konghq.com: httpbin-auth
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: httpbin
              servicePort: 80
