kong/consumers-credentials-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: httpbin
              servicePort: 80
