kong/kong-admin-ingress.yaml
# apiVersion: cert-manager.io/v1alpha2
# kind: ClusterIssuer
# metadata:
#   name: kong-admin-selfsigned
# spec:
#   selfSigned: {}
# ---
# apiVersion: cert-manager.io/v1alpha2
# kind: Certificate
# metadata:
#   name: kong-admin-cert
# spec:
#   commonName: admin.foo.org
#   secretName: kong-admin-cert-tls
#   issuerRef:
#     name: kong-admin-selfsigned
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   namespace: metallb-system
#   name: config
# data:
#   config: |
#     address-pools:
#     - name: default
#       protocol: layer2
#       addresses:
#       - 192.168.50.200-192.168.50.210
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: kong-admin-ingress
#   namespace: kong
# spec:
#   tls:
#     - hosts:
#         - admin.foo.org
#       secretName: kong-admin-cert-tls
#   rules:
#     - host: admin.foo.org
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: kong-admin
#               servicePort: 8444

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-admin-ingress
  namespace: kong
spec:
  rules:
    - host: admin.foo.org
      http:
        paths:
          - path: /
            backend:
              serviceName: kong-kong-admin
              servicePort: 8444
