kong/kong-cert-metallb-https-redirect.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: echo-foo-org
# spec:
#   rules:
#     - host: echo.foo.org
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: echo
#               servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-foo-org
  annotations:
    kubernetes.io/tls-acme: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: echo-selfsigned
    configuration.konghq.com: https-only
spec:
  tls:
    - secretName: echo-cert-tls
      hosts:
        - echo.foo.org
  rules:
    - host: echo.foo.org
      http:
        paths:
          - path: /
            backend:
              serviceName: echo
              servicePort: 80
