kong/konga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
  labels:
    app: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        name: konga
        app: konga
    spec:
      containers:
        - name: konga
          image: pantsel/konga
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: kong
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 1337
      protocol: TCP
  selector:
    app: konga
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: kong
spec:
  rules:
    - host: konga.foo.org
      http:
        paths:
          - path: /
            backend:
              serviceName: konga
              servicePort: 80
