kong/kongingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: echo
              servicePort: 80
