kong/kongingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    configuration.konghq.com: demo-customization
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: echo
              servicePort: 80
