kong/multiple-services-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
  name: sample-ingresses
spec:
  rules:
    - http:
        paths:
          - path: /billing
            backend:
              serviceName: billing
              servicePort: 80
          - path: /comments
            backend:
              serviceName: comments
              servicePort: 80
          - path: /invoice
            backend:
              serviceName: invoice
              servicePort: 80
