kong/service-plugin-test copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    plugins.konghq.com: rl-by-ip # service plugin
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nginx
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /nginx
#             backend:
#               serviceName: nginx
#               servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-example-com
  annotations:
    plugins.konghq.com: request-id # ingress plugin
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /bar
            backend:
              serviceName: nginx
              servicePort: 80
